# smallsteps

./: .gitignore  .pre-commit-config.yaml  README.md  babysteps.toml  coverage.json  pyproject.toml  smallsteps.toml
.basedpyright/: baseline.json
.github/actions/babysteps/: action.yml
.github/actions/smallsteps/: action.yaml
.github/workflows/: ci.yaml
src/babysteps/: __init__.py  ci_adapter.py  cli.py  cli_helpers.py  command_runner.py  config_adapter.py  prober.py  ratchet.py
src/smallsteps/: __init__.py  ci_adapter.py  cli.py  command_runner.py  config_adapter.py  parsing.py  prober.py
tests/: helpers.py  test_cli.py  test_command_runner.py  test_prober.py  test_ratchet.py
