[project]
name = "smallsteps"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.4.1",
    "ruff>=0.15.19",
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.uv]
package = true

[project.scripts]
smallsteps = "smallsteps.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.1.2"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
