[project]
name = "smallsteps"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "bump-my-version>=1.4.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.19",
]
test = [
    "pytest-cov>=7.1.0",
    "pytest>=9.0.3",
]

[tool.uv]
package = true

[project.scripts]
smallsteps = "smallsteps.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.1.6"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
